--- a/prod.html
+++ b/prod.html
@@ -12,7 +12,7 @@
     </div>
 </body>
 </html>
-<script>
+<!-- <script>
     const prods = document.getElementById('prods')
     async function data(){
         await fetch('http://localhost:5001/prod')
@@ -25,4 +25,4 @@
         }))
     }
     data();
-</script>
+</script> -->
